[package]
name = "stablecoin"
version = "1.0.0"
edition = "2021"
authors = ["Musharraf","Shah Dost"]

[dependencies]

ink = { version = "4.2.1", default-features = false }

scale = { package = "parity-scale-codec", version = "3", default-features = false, features = ["derive"] }
scale-info = { version = "2.6", default-features = false, features = ["derive"], optional = true }
dia-oracle-getter = { path = "../oracle-contracts/oracle-getter", default-features = false }

# Include brush as a dependency and enable default implementation for PSP22 via brush features
openbrush = { version = "4.0.0-beta.1", git = "https://github.com/Brushfam/openbrush-contracts", default-features = false, features = ["psp22", "ownable"] }
[dev-dependencies]
dia-oracle = { path = "../oracle-contracts/oracle", default-features = false }
dia-oracle-setter = { path = "../oracle-contracts/oracle-setter", default-features = false }
[lib]
name = "stablecoin"
path = "lib.rs"

[features]
default = ["std"]
std = [
    "ink/std",
    "scale/std",
    "scale-info/std",
    "openbrush/std",
    "dia-oracle-getter/std",
]
ink-as-dependency = [] 

[profile.dev]
codegen-units = 16

  [profile.release]
  overflow-checks = false